--- a/style.css
+++ b/style.css
@@ -62,14 +62,14 @@ nav{
     height: 80px;
     width: 100%;
     display: flex;
-    z-index: 1;
+    /* z-index: 1; */
     align-items: center;
     justify-content: space-between;
     /* position: sticky; */
     top: 0;
     font-family: "Kanit", sans-serif;
-    box-shadow: 3px 3px 10px rgba(255, 255, 255, 0.637);
-    z-index: 999;
+    /* box-shadow: 3px 3px 10px rgba(255, 255, 255, 0.637); */
+    /* z-index: 999; */
     position: fixed;
 }
 nav div{
@@ -269,7 +269,7 @@ header {
     }
 }
 .learn{
-    padding: 20px 30px;
+    /* padding: 20px 30px; */
     font-size: 1.25rem;
     cursor: pointer;
     border: 0px;
