--- a/style2.css
+++ b/style2.css
@@ -90,23 +90,23 @@ main .footer a button{
     margin-bottom: 1rem;
     overflow: hidden;
 }
-/* main .footer a button:hover{
+main .footer a button:hover{
     transition: transform 0.5s;
     transform: translate(0, -6px);
     box-shadow: 10px -10px 25px 0px rgba(143, 64, 248, 0.5), -10px 10px 25px 0px rgba(39, 200, 255, 0.5);
 }
 main .footer a button:hover::after{
     transform: rotate(150deg);
-} */
+}
 main .footer a button::after{
     content: "";
-    width: 400px; 
+    width: 99%;
     height: 400px;
     position: absolute;
-    top: -100px;
-    left: -20px;
-    /* background-color: #c625d0;
-    /* background-image: linear-gradient(255deg, #27d86c 0%,#26caf8 50%, #c625d0 100%); */
+    top: -200px;
+    left: 4px;
+    background-color: #c625d0;
+    background-image: linear-gradient(255deg, #27d86c 0%,#26caf8 50%, #c625d0 100%);
     z-index: -1;
     transition: all 0.5s ease;
 }
