--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ nav{
     top: 0;
     font-family: "Kanit", sans-serif;
     /* box-shadow: 3px 3px 10px rgba(255, 255, 255, 0.637); */
-    /* z-index: 999; */
+    z-index: 999;
     position: fixed;
 }
 nav div{
